...
    <string name="settings_toast_failure_sign_out">Failed to sign out</string>
    <string name="settings_toast_success_delete">Account deleted successfully</string>
    <string name="settings_toast_failure_delete">Failed to delete account</string>
    <string name="settings_toast_load_data_failure">Failed loading user authentication data</string>

    <!-- Create Alert Screen -->
    <string name="create_alert_screen_title">Create Alert</string>
    <string name="create_alert_instruction_text">
        Push a notification to users near you! If they are available and have the products you need,
        they\'ll be able to help you!
    </string>

    <string name="create_alert_product_dropdown_default_value">Please choose a product</string>
    <string name="create_alert_urgency_dropdown_default_value">Please choose an urgency level</string>
    <string name="create_alert_submission_button_text">Ask for Help</string>

    <string name="create_alert_toast_successful_submission_message">Alert sent</string>

    <!-- Edit Alert Screen -->
    <string name="edit_alert_screen_title">Edit Your Alert</string>
    <string name="edit_alert_instruction_text">
...
